--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "hamburger-react": "^2.4.0",
     "next": "10.0.9",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
