--- a/pages/api/projects.json
+++ b/pages/api/projects.json
@@ -18,6 +18,11 @@
 			"projectName": "Studportal",
 			"projectLink": "https://studportal.vercel.app/auth",
 			"projectDescription": "student portal (evsu) clone made possible by nodejs request library by scraping the content of the current system user, built with nextjs for frontend and nodejs (express, request, cheerio) for backend."
+		},
+                {
+			"projectName": "Mobeapp",
+			"projectLink": "https://mobeapp.vercel.app/auth",
+			"projectDescription": "an IMDB clone that is a progressive web app (pwa), got the data from TMDB api with the help of vue framework (nuxtjs)."
 		}
 	]
 ]
