--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "hamburger-react": "^2.4.0",
     "next": "10.0.9",
+    "next-seo": "^4.26.0",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
