--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "hamburger-react": "^2.4.0",
     "next": "10.0.9",
     "next-seo": "^4.26.0",
-    "node-sass": "^5.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-fade-in": "^2.0.1",
+    "sass": "^1.49.7"
   }
 }
