--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-fade-in": "^2.0.1",
+    "react-masonry-css": "^1.0.16",
     "sass": "^1.49.7"
   }
 }
