--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "hamburger-react": "^2.4.0",
     "next": "10.0.9",
     "next-seo": "^4.26.0",
+    "next-themes": "^0.0.15",
     "react": "17.0.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "17.0.1",
     "react-fade-in": "^2.0.1",
     "react-masonry-css": "^1.0.16",
