--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.1",
     "react-fade-in": "^2.0.1",
     "react-masonry-css": "^1.0.16",
+    "react-reveal": "^1.2.2",
     "sass": "^1.49.7"
   }
 }
