--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "hamburger-react": "^2.4.0",
+    "lodash": "^4.17.21",
     "next": "10.0.9",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
@@ -19,7 +20,8 @@
     "react-fade-in": "^2.0.1",
     "react-masonry-css": "^1.0.16",
     "react-reveal": "^1.2.2",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
