--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "hamburger-react": "^2.4.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "10.0.9",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
