--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "17.0.1",
     "react-fade-in": "^2.0.1",
+    "react-loading-skeleton": "^3.0.3",
     "react-masonry-css": "^1.0.16",
     "react-reveal": "^1.2.2",
     "sass": "^1.49.7",
