--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "10.0.9",
+    "next-pwa": "^5.4.6",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
     "react": "17.0.1",
