--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
   "name": "Christian Paranas",
   "short_name": "Christian",
   "theme_color": "#6b21a8",
-  "background_color": "#6b21a8",
-  "display": "fullscreen",
+  "background_color": "#fff",
+  "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
