--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^0.19.7",
+    "@uiw/react-codemirror": "^4.5.1",
     "hamburger-react": "^2.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
