--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@codemirror/lang-javascript": "^0.19.7",
-    "@uiw/react-codemirror": "^4.5.1",
     "hamburger-react": "^2.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -19,12 +17,11 @@
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
     "react": "17.0.1",
-    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "17.0.1",
     "react-fade-in": "^2.0.1",
     "react-loading-skeleton": "^3.0.3",
     "react-masonry-css": "^1.0.16",
-    "react-reveal": "^1.2.2",
+    "react-syntax-highlighter": "^15.4.5",
     "sass": "^1.49.7",
     "swr": "^1.2.2"
   },
