--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.0",
+    "@next/mdx": "^12.1.0",
     "hamburger-react": "^2.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "next": "10.0.9",
+    "next": "^12.1.0",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-fade-in": "^2.0.1",
     "react-loading-skeleton": "^3.0.3",
     "react-masonry-css": "^1.0.16",
