--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "^12.1.0",
+    "next-auth": "^4.3.1",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
     "react": "^17.0.2",
