--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DATABASE_URL=
-
-GITHUB_ID=
-GITHUB_SECRET=
-NEXTAUTH_URL=http://localhost:3000/api/auth
+GITHUB_OAUTH_CLIENT_ID=
+GITHUB_OAUTH_CLIENT_SECRET=
+NEXTAUTH_URL=http://localhost:3000
+NEXT_AUTH_SECRET=
