--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ GITHUB_OAUTH_CLIENT_ID=
 GITHUB_OAUTH_CLIENT_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 NEXT_AUTH_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
