--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^2.1.0",
     "@next/mdx": "^12.1.0",
     "@prisma/client": "^3.11.0",
+    "classnames": "^2.3.1",
     "hamburger-react": "^2.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
