--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fade-in": "^2.0.1",
+    "react-github-calendar": "^3.3.1",
     "react-loading-skeleton": "^3.0.3",
     "react-masonry-css": "^1.0.16",
     "react-syntax-highlighter": "^15.4.5",
