--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@mdx-js/loader": "^2.1.0",
     "@next/mdx": "^12.1.0",
     "@prisma/client": "^3.11.0",
     "classnames": "^2.3.1",
+    "graphql": "^16.3.0",
     "hamburger-react": "^2.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
