--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.5",
     "gray-matter": "^4.0.3",
     "next-mdx-remote": "^4.0.2",
-    "prisma": "^3.11.0"
+    "postcss": "^8.4.12",
+    "prisma": "^3.11.0",
+    "tailwindcss": "^3.0.24"
   }
 }
