--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@mdx-js/loader": "^2.1.0",
     "@next/mdx": "^12.1.0",
     "@prisma/client": "^3.11.0",
-    "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "hamburger-react": "^2.4.0",
     "lodash": "^4.17.21",
@@ -26,7 +26,7 @@
     "react-fade-in": "^2.0.1",
     "react-github-calendar": "^3.3.1",
     "react-loading-skeleton": "^3.0.3",
-    "react-masonry-css": "^1.0.16",
+    "react-responsive-masonry": "^2.1.4",
     "react-syntax-highlighter": "^15.4.5",
     "sass": "^1.49.7",
     "swr": "^1.2.2"
