--- a/package.json
+++ b/package.json
@@ -9,34 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.10",
-    "@mdx-js/loader": "^2.1.0",
-    "@next/mdx": "^12.1.0",
-    "@prisma/client": "^3.11.0",
-    "graphql": "^16.3.0",
-    "hamburger-react": "^2.4.0",
+    "@apollo/client": "^3.9.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@next/mdx": "^16.0.6",
+    "@prisma/client": "^5.21.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.6",
+    "graphql": "^16.9.0",
+    "hamburger-react": "^2.5.1",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "next": "^12.1.0",
-    "next-auth": "^4.3.1",
-    "next-seo": "^4.26.0",
-    "next-themes": "^0.0.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "moment": "^2.30.1",
+    "next": "^16.0.6",
+    "next-auth": "^4.24.13",
+    "next-seo": "^6.4.0",
+    "next-themes": "^0.4.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-fade-in": "^2.0.1",
-    "react-github-calendar": "^3.3.1",
-    "react-loading-skeleton": "^3.0.3",
-    "react-responsive-masonry": "^2.1.4",
-    "react-syntax-highlighter": "^15.4.5",
-    "sass": "^1.49.7",
-    "swr": "^1.2.2"
+    "react-github-calendar": "^4.1.4",
+    "react-loading-skeleton": "^3.4.1",
+    "react-responsive-masonry": "^2.1.7",
+    "react-syntax-highlighter": "^15.5.0",
+    "sass": "^1.77.8",
+    "swr": "^2.2.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
     "gray-matter": "^4.0.3",
-    "next-mdx-remote": "^4.0.2",
-    "postcss": "^8.4.12",
-    "prisma": "^3.11.0",
-    "tailwindcss": "^3.0.24"
+    "next-mdx-remote": "^5.0.0",
+    "postcss": "^8.4.47",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.17"
   }
 }
