--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "next-themes": "^0.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-fade-in": "^2.0.1",
     "react-github-calendar": "^4.1.4",
     "react-loading-skeleton": "^3.4.1",
     "react-responsive-masonry": "^2.1.7",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.77.8",
-    "swr": "^2.2.6"
+    "swr": "^2.2.6",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
